--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: info@sidermes.ru
 description: >-
   Мы работаем в качестве поставщика измерительных датчиков и приборов для металлургической отрасли с 1978 года, постоянно совершенствуя свои системы и технологии в целях производства высококачественной продукции
 baseurl: ""
-url: "http://special.ikovylyaev.tk/sidermes"
+url: "http://work.ikovylyaev.tk/"
 
 markdown: kramdown
 theme: minima
