--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Sidermes
-email: info@sidermes.ru
+email: sidermaes@ikovylyaev.com
 description: >-
   Мы работаем в качестве поставщика измерительных датчиков и приборов для металлургической отрасли с 1978 года, постоянно совершенствуя свои системы и технологии в целях производства высококачественной продукции
 baseurl: ""
-url: "http://work.ikovylyaev.tk/"
+url: "http://sidermes/ikovylyaev.com"
 
 markdown: kramdown
 theme: jekyll-theme-cayman
