--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: sidermaes@ikovylyaev.com
 description: >-
   Мы работаем в качестве поставщика измерительных датчиков и приборов для металлургической отрасли с 1978 года, постоянно совершенствуя свои системы и технологии в целях производства высококачественной продукции
 baseurl: ""
-url: "http://sidermes/ikovylyaev.com"
+url: "http://sidermes.ikovylyaev.com"
 
 markdown: kramdown
 theme: jekyll-theme-cayman
